--- a/TallinnaRakenduslikKolledz/appsettings.json
+++ b/TallinnaRakenduslikKolledz/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MYSCHOOLDB;Trusted_Connection=True;MultipleActiveResultSets=True"
+        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MYSCHOOLDB3;Trusted_Connection=True;MultipleActiveResultSets=True"
     },
     "Logging": {
         "LogLevel": {
